Finalise stable version